<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input"
        app:layout_constraintVertical_bias="0.95"
        tools:layout_editor_absoluteX="1dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/clearBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#DD2C00"
                android:onClick="clearBTN"
                android:text="@string/clear"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/parenthesesBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="parenthesesBTN"
                android:text="@string/parentheses"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/modBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="modBTN"
                android:text="@string/mod"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/divideBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="divideBTN"
                android:text="@string/divide"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp">

            <Button
                android:id="@+id/btn7"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="@color/material_dynamic_neutral70"
                android:onClick="btn7"
                android:text="@string/seven"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn8"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="@color/material_dynamic_neutral70"
                android:onClick="btn8"
                android:text="@string/eight"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn9"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="@color/material_dynamic_neutral70"
                android:onClick="btn9"
                android:text="@string/nine"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/multiplyBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="multiplyBTN"
                android:text="@string/multiply"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp">

            <Button
                android:id="@+id/btn4"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="@color/material_dynamic_neutral70"
                android:onClick="btn4"
                android:text="@string/four"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn5"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="@color/material_dynamic_neutral70"
                android:onClick="btn5"
                android:text="@string/five"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn6"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="@color/material_dynamic_neutral70"
                android:onClick="btn6"
                android:text="@string/six"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/subtractBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="subtractBTN"
                android:text="@string/subtract"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp">

            <Button
                android:id="@+id/btn1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="@color/material_dynamic_neutral70"
                android:onClick="btn1"
                android:text="@string/one"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="@color/material_dynamic_neutral70"
                android:onClick="btn2"
                android:text="@string/two"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn3"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="@color/material_dynamic_neutral70"
                android:onClick="btn3"
                android:text="@string/three"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/addBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="addBTN"
                android:text="@string/add"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/minus_plusBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="@color/material_dynamic_neutral70"
                android:onClick="minus_plusBTN"
                android:text="@string/plus_minus"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn0"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="@color/material_dynamic_neutral70"
                android:onClick="btn0"
                android:text="@string/zero"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/pointBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="@color/material_dynamic_neutral70"
                android:onClick="pointBTN"
                android:text="@string/point"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/equalBTN"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#1F1E1E"
                android:onClick="equalBTN"
                android:text="@string/equal"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <ImageButton
        android:id="@+id/cencelBTN"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/circle"
        android:backgroundTint="@android:color/background_dark"
        android:contentDescription="@string/backspace"
        android:onClick="cencelBTN"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/backspace_img" />

    <EditText
        android:id="@+id/input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="false"
        android:inputType="none"
        android:padding="20dp"
        android:text="@string/display"
        android:textAlignment="textEnd"
        android:fontFamily="monospace"
        android:textSize="36sp"
        android:textColor="@color/white"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
